correcao de cores do menu

--- a/style/menu.css
+++ b/style/menu.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #dfd9d9;
+    background-color: #6464836c;
 }
 
 .produto-destaque {
@@ -94,7 +94,7 @@ body{
     height: auto;
     border-radius: 12px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.363);
-    background-color: #ecebeb;
+    background-color: #6464833d;
   }
 
 
