--- a/style/style.css
+++ b/style/style.css
@@ -41,15 +41,8 @@ header {
 }
 
 .logo img {
-  width: 80px;
-  border-radius: 100%;
+  width: 330px;
   height: auto;
-}
-
-.logo span {
-  font-size: 36px;
-  color: #2c5781;
-  font-weight: 600;
 }
 
 nav {
@@ -225,9 +218,7 @@ nav {
 
 @media (max-width: 488px) {
 
-  .logo span {
-    font-size: 24px;
-  }
+
 
   .menu-toggle {
     display: block;
@@ -274,17 +265,14 @@ nav {
     font-size: 14px;
     max-width: 100%;
   }
+  .logo img {
+    width: 35vh;
+  }
 }
 
 
 @media (max-width: 900px) {
 
-  .logo span {
-    font-size: 24px;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
 
   nav.active .menu,
   nav.active .contato {
@@ -318,5 +306,9 @@ nav {
   .btn-orcamento {
     font-size: 14px;
     max-width: 100%;
+  }
+
+  .logo img {
+    width: 35vh;
   }
 }
