--- a/style/style.css
+++ b/style/style.css
@@ -101,6 +101,7 @@ nav {
 
 .dropdown:hover .submenu {
   display: block;
+  top: 2.0rem;
 }
 
 .contato a {
@@ -219,6 +220,9 @@ nav {
 @media (max-width: 488px) {
 
 
+  body{
+    max-height: 50%;
+  }
 
   .menu-toggle {
     display: block;
@@ -273,6 +277,10 @@ nav {
 
 @media (max-width: 900px) {
 
+  
+  body{
+    max-height: 50%;
+  }
 
   nav.active .menu,
   nav.active .contato {
